force-app/main/default/objects/df_journal_dk_new__c/df_journal_dk_new__c.object-meta.xml
<CustomObject>
    <label>Journal DK (2.0)</label>
    <nameField>
        <label>Journal DK (2.0) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal DK (2.0)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>