force-app/main/default/objects/df_journal_dk_new__c/fields/aarstal__c.field-meta.xml
<CustomField>
    <fullName>aarstal__c</fullName>
    <label>Årstal (Skjult felt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>