force-app/main/default/objects/df_journal_dk_new__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Journal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Journal__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal DK (2.0)s</relationshipLabel>
    <relationshipName>Journal_DK_2_0_s</relationshipName>
    <type>Lookup</type>
</CustomField>