force-app/main/default/objects/df_journal_dk_new__c/fields/arveafkald__c.field-meta.xml
<CustomField>
    <fullName>arveafkald__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arveafkald</label>
    <type>Checkbox</type>
</CustomField>