force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_0_brn__c.field-meta.xml
<CustomField>
    <fullName>arveford_0_brn__c</fullName>
    <label>Fordeling af arv efter længstlev 8a235</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_0_brn_procent</fullName>
                <label>Procentfordeling</label>
            </value>
            <value>
                <fullName>arveford_0_brn_30</fullName>
                <label>30% reglen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>