force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_1_brn_hensyn__c.field-meta.xml
<CustomField>
    <fullName>arveford_1_brn_hensyn__c</fullName>
    <label>Fordeling af arv efter længstlev ce164</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_1_brn_hensyn_procent</fullName>
                <label>Procentfordeling</label>
            </value>
            <value>
                <fullName>arveford_1_brn_hensyn_alt</fullName>
                <label>Alt til barn/børn</label>
            </value>
            <value>
                <fullName>arveford_1_brn_hensyn_mindst</fullName>
                <label>Mindst muligt til barnet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>