force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_beting_p1__c.field-meta.xml
<CustomField>
    <fullName>arveford_beting_p1__c</fullName>
    <label>Arvefordeling hvis Person 1 går  1ad0e</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_beting_p1_egne_lige</fullName>
                <label>Mest muligt ligedelt til egne livsarvinger</label>
            </value>
            <value>
                <fullName>arveford_beting_mest_partner_p1</fullName>
                <label>Mest muligt til partner</label>
            </value>
            <value>
                <fullName>arveford_beting_mest_brn_p1</fullName>
                <label>Mest muligt ligedelt mellem børn</label>
            </value>
            <value>
                <fullName>arveford_beting_procent_p1</fullName>
                <label>Procentfordeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>