force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_beting_p2__c.field-meta.xml
<CustomField>
    <fullName>arveford_beting_p2__c</fullName>
    <label>Arvefordeling hvis Person 2 går  1f1d3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_beting_p2_egne_lige</fullName>
                <label>Mest muligt ligedelt til egne livsarvinger</label>
            </value>
            <value>
                <fullName>arveford_beting_mest_partner_p2</fullName>
                <label>Mest muligt til partner</label>
            </value>
            <value>
                <fullName>arveford_beting_mest_brn_p2</fullName>
                <label>Mest muligt fordelt lige mellem børn</label>
            </value>
            <value>
                <fullName>arveford_beting_procent_p2</fullName>
                <label>Procentfordeling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>