force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_flere_brn_flles__c.field-meta.xml
<CustomField>
    <fullName>arveford_flere_brn_flles__c</fullName>
    <label>Fordeling af arv efter længstlev c6dcb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_flere_brn_flles_procent</fullName>
                <label>Procentfordeling</label>
            </value>
            <value>
                <fullName>arveford_flere_brn_flles_lige</fullName>
                <label>Ligedeling mellem alle børn</label>
            </value>
            <value>
                <fullName>arveford_flere_brn_flles_ulige</fullName>
                <label>Ligedeling mellem udvalgte børn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>