force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_flere_brn_sammenbr__c.field-meta.xml
<CustomField>
    <fullName>arveford_flere_brn_sammenbr__c</fullName>
    <label>Fordeling af arv efter længstlev b38e4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>arveford_flere_brn_sammenbr_procent</fullName>
                <label>Procentfordeling</label>
            </value>
            <value>
                <fullName>arveford_flere_brn_sammenbr_lige</fullName>
                <label>Ligedeling mellem alle børn</label>
            </value>
            <value>
                <fullName>arveford_flere_brn_sammenbr_ulige</fullName>
                <label>Ligedeling mellem udvalgte børn</label>
            </value>
            <value>
                <fullName>arveford_flere_brn_sammenbr_gren</fullName>
                <label>Arv efter gren</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>