force-app/main/default/objects/df_journal_dk_new__c/fields/arveford_til_gruppe__c.field-meta.xml
<CustomField>
    <fullName>arveford_til_gruppe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afsæt en procentdel til gruppe a 09563</label>
    <type>Checkbox</type>
</CustomField>