force-app/main/default/objects/df_journal_dk_new__c/fields/beboelsesret_by__c.field-meta.xml
<CustomField>
    <fullName>beboelsesret_by__c</fullName>
    <label>By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>