force-app/main/default/objects/df_journal_dk_new__c/fields/beboelsesret_giver__c.field-meta.xml
<CustomField>
    <fullName>beboelsesret_giver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hvem afgiver beboelsesret?</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>beboelsesret_giver</relationshipLabel>
    <relationshipName>beboelsesret_giver</relationshipName>
    <type>Lookup</type>
</CustomField>