force-app/main/default/objects/df_journal_dk_new__c/fields/beboelsesret_matrikelnummer__c.field-meta.xml
<CustomField>
    <fullName>beboelsesret_matrikelnummer__c</fullName>
    <label>Matrikelnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>