force-app/main/default/objects/df_journal_dk_new__c/fields/beboelsesret_postnummer__c.field-meta.xml
<CustomField>
    <fullName>beboelsesret_postnummer__c</fullName>
    <label>Postnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>