force-app/main/default/objects/df_journal_dk_new__c/fields/beboelsesret_til_hvlkn_adr__c.field-meta.xml
<CustomField>
    <fullName>beboelsesret_til_hvlkn_adr__c</fullName>
    <label>Adresse som afgives beboelsesret 1bb72</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>beboelsesret_adr_p1</fullName>
                <label>Adressen indtastet på Person 1</label>
            </value>
            <value>
                <fullName>beboelsesret_adr_p2</fullName>
                <label>Adressen indtastet på Person 2</label>
            </value>
            <value>
                <fullName>beboelsesret_adr_anden</fullName>
                <label>Anden adresse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>