force-app/main/default/objects/df_journal_dk_new__c/fields/begnst_opstning_p1__c.field-meta.xml
<CustomField>
    <fullName>begnst_opstning_p1__c</fullName>
    <label>Begunstigelse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>begnst_opstning_p1_1</fullName>
                <label>Indfør kun én begunstiget</label>
            </value>
            <value>
                <fullName>begnst_opstning_p1_1prim_1sub</fullName>
                <label>Indfør én primær og én subsidiær</label>
            </value>
            <value>
                <fullName>begnst_opstning_p1_1prim_flsub</fullName>
                <label>Indfør én primær og flere subsidiære</label>
            </value>
            <value>
                <fullName>begnst_opstning_p1_forening</fullName>
                <label>Indfør alle begunstigede i forening</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>