force-app/main/default/objects/df_journal_dk_new__c/fields/begunst_ford_p2__c.field-meta.xml
<CustomField>
    <fullName>begunst_ford_p2__c</fullName>
    <label>Hvordan skal begunstigelsen ford dd6fa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>begunst_ford_p2_lige</fullName>
                <label>Ligedeling</label>
            </value>
            <value>
                <fullName>begunst_ford_p2_prio</fullName>
                <label>Prioriteret rækkefølge</label>
            </value>
            <value>
                <fullName>begunst_ford_p2_spec</fullName>
                <label>Specificeret andel til hver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>