force-app/main/default/objects/df_journal_dk_new__c/fields/begunstigelse_tilf_subsi_p2__c.field-meta.xml
<CustomField>
    <fullName>begunstigelse_tilf_subsi_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tilføj subsidiær begunstiget?</label>
    <type>Checkbox</type>
</CustomField>