force-app/main/default/objects/df_journal_dk_new__c/fields/begunstigelseserklring_boolean__c.field-meta.xml
<CustomField>
    <fullName>begunstigelseserklring_boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Begunstigelseserklæring</label>
    <type>Checkbox</type>
</CustomField>