force-app/main/default/objects/df_journal_dk_new__c/fields/begunstigelseserklring_opr_hvem__c.field-meta.xml
<CustomField>
    <fullName>begunstigelseserklring_opr_hvem__c</fullName>
    <label>Hvem skal oprette begunstigelses d8452</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>begunstigelseserklring_opr_p1</fullName>
                <label>Person 1</label>
            </value>
            <value>
                <fullName>begunstigelseserklring_opr_p2</fullName>
                <label>Person 2</label>
            </value>
            <value>
                <fullName>begunstigelseserklring_opr_begge</fullName>
                <label>Begge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>