force-app/main/default/objects/df_journal_dk_new__c/fields/begunstigelseserklring_srejeform_399__c.field-meta.xml
<CustomField>
    <fullName>begunstigelseserklring_srejeform_399__c</fullName>
    <label>Særejeform 763c1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>begunstigelse_sreje_nej_p1</fullName>
                <label>Ikke særeje</label>
            </value>
            <value>
                <fullName>begunstigelse_sreje_skilsm_p1</fullName>
                <label>Skilsmissesæreje</label>
            </value>
            <value>
                <fullName>begunstigelse_sreje_fuldst_p1</fullName>
                <label>Fuldstændigt særeje</label>
            </value>
            <value>
                <fullName>begunstigelse_sreje_kombi_p1</fullName>
                <label>Kombinationssæreje</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>