force-app/main/default/objects/df_journal_dk_new__c/fields/beskrivelse_kodicil__c.field-meta.xml
<CustomField>
    <fullName>beskrivelse_kodicil__c</fullName>
    <label>Beskrivelse - Kodicil</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>