force-app/main/default/objects/df_journal_dk_new__c/fields/beting_arvefordelingsbest__c.field-meta.xml
<CustomField>
    <fullName>beting_arvefordelingsbest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Betingede arvefordelingsbestemme f4f32</label>
    <type>Checkbox</type>
</CustomField>