force-app/main/default/objects/df_journal_dk_new__c/fields/bibehold_bestemm_beboelsesret__c.field-meta.xml
<CustomField>
    <fullName>bibehold_bestemm_beboelsesret__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestemmelser omhandlende beboels 4992a</label>
    <type>Checkbox</type>
</CustomField>