force-app/main/default/objects/df_journal_dk_new__c/fields/bibehold_bestemm_bndlggelse__c.field-meta.xml
<CustomField>
    <fullName>bibehold_bestemm_bndlggelse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestemmelser omhandlende båndlæg 12d72</label>
    <type>Checkbox</type>
</CustomField>