force-app/main/default/objects/df_journal_dk_new__c/fields/bibehold_bestemm_brn__c.field-meta.xml
<CustomField>
    <fullName>bibehold_bestemm_brn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestemmelser omhandlende børn bi 4d432</label>
    <type>Checkbox</type>
</CustomField>