force-app/main/default/objects/df_journal_dk_new__c/fields/bibehold_bestemm_brnetesta__c.field-meta.xml
<CustomField>
    <fullName>bibehold_bestemm_brnetesta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestemmelser omhandlende børnete b6517</label>
    <type>Checkbox</type>
</CustomField>