force-app/main/default/objects/df_journal_dk_new__c/fields/bibehold_bestemm_sreje__c.field-meta.xml
<CustomField>
    <fullName>bibehold_bestemm_sreje__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestemmelser omhandlende særeje  f7b4d</label>
    <type>Checkbox</type>
</CustomField>