force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_andet_2__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_andet_2__c</fullName>
    <label>Andet #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>