force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_andre_vilkr__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_andre_vilkr__c</fullName>
    <label>Indsæt andre båndlæggelsesvilkår</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_andre_vilkr_et</fullName>
                <label>Indsæt ét andet vilkår</label>
            </value>
            <value>
                <fullName>bndlggelse_andre_vilkr_to</fullName>
                <label>Indsæt to andre vilkår</label>
            </value>
            <value>
                <fullName>bndlggelse_andre_vilkr_tre</fullName>
                <label>Indsæt tre andre vilkår</label>
            </value>
            <value>
                <fullName>bndlgglse_andre_vilkr_nej</fullName>
                <label>Nej, der ønskes ingen yderligere vilkår</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>