force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_belb_kb_fast_ejndm__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_belb_kb_fast_ejndm__c</fullName>
    <label>Op til dette beløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>