force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_belb_udg_forb_fast_ej_405__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_belb_udg_forb_fast_ej_405__c</fullName>
    <label>Op til dette beløb 99eeb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>