force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_bryllp__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_bryllp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bryllup</label>
    <type>Checkbox</type>
</CustomField>