force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_bryllup__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_bryllup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bryllup (Legacy)</label>
    <type>Checkbox</type>
</CustomField>