force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_fdselsdagsgave__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_fdselsdagsgave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fødselsdagsgave (Legacy)</label>
    <type>Checkbox</type>
</CustomField>