force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_fdslsdgsgve__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_fdslsdgsgve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fødselsdagsgave</label>
    <type>Checkbox</type>
</CustomField>