force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_forldreskab__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_forldreskab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forældreskab (Legacy)</label>
    <type>Checkbox</type>
</CustomField>