force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_forldrskb__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_forldrskb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forældreskab</label>
    <type>Checkbox</type>
</CustomField>