force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_helbreds_udg__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_helbreds_udg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Helbredsmæssige udgifter (Legacy b5fdf</label>
    <type>Checkbox</type>
</CustomField>