force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_helbrudg__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_helbrudg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Helbredsmæssige udgifter</label>
    <type>Checkbox</type>
</CustomField>