force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_inds_gngs_vilk__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_inds_gngs_vilk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indsæt blot 6 mest gængse båndlæ a2fcb</label>
    <type>Checkbox</type>
</CustomField>