force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_indskud_lejeb__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_indskud_lejeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indskud til lejebolig</label>
    <type>Checkbox</type>
</CustomField>