force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_kb_fastejndm__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_kb_fastejndm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Køb af fast ejendom</label>
    <type>Checkbox</type>
</CustomField>