force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_krekort__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_krekort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kørekort (Legacy)</label>
    <type>Checkbox</type>
</CustomField>