force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_krekrt__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_krekrt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kørekort</label>
    <type>Checkbox</type>
</CustomField>