force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_livstruende_fuld_frig_328__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_livstruende_fuld_frig_328__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Livstruende sygdom hos arving, e d2095</label>
    <type>Checkbox</type>
</CustomField>