force-app/main/default/objects/df_journal_dk_new__c/fields/bndlggelse_picklist__c.field-meta.xml
<CustomField>
    <fullName>bndlggelse_picklist__c</fullName>
    <label>Båndlæggelse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>bndlggelse_nej</fullName>
                <label>Arven skal ikke båndlægges</label>
            </value>
            <value>
                <fullName>bndlggelse_uden_undtagelser</fullName>
                <label>Arven skal båndlægges, uden undtagelser</label>
            </value>
            <value>
                <fullName>bndlggelse_visse_undtagelser</fullName>
                <label>Arven skal båndlægges, men med visse undtagelser</label>
            </value>
            <value>
                <fullName>bndlggelse_udb_i_3_rater</fullName>
                <label>Arven skal båndlægges og udbetales i tre rater</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>